--- a/LEMA/Views/Sobre/Index.cshtml
+++ b/LEMA/Views/Sobre/Index.cshtml
@@ -2,25 +2,121 @@
     ViewData["Title"] = "Sobre";
 }
 
+<link rel="stylesheet" href="~/css/sobre.css">
+
 
 <section class="home-section">
-    <div class="text">Sobre</div>
-    <div class="about-text">
-        <p>Nós somos o LEMA, e nossa missão é oferecer soluções inovadoras para garantir a eficiência e qualidade do seu processo de secagem.</p>
-        <p>Através da integração de sistemas IoT (Internet das Coisas), os dados são em tempo real diretamente das suas estufas, proporcionando uma visão abrangente do estado térmico.</p>
-        <p>Nossa plataforma oferece dashboards intuitivos e altamente personalizáveis, permitindo que você monitore e controle a temperatura de suas estufas com facilidade.</p>
-        <p>Estamos aqui para ajudá-lo a alcançar os melhores resultados possíveis e garantir a excelência operacional do seu negócio.</p>
-        <p>Escolha o LEMA e eleve o controle de temperatura em suas estufas para um novo nível de eficiência e qualidade.</p>
-    </div>
-    <div>
-        <br />
-        <br />
-        <p><strong>INTEGRANTES</strong></p>
-        <p>Arthur Farias dos Santos - 081220006</p>
-        <p>Eloá Torres Cunha - 082210021</p>
-        <p>Levi Matheus Bastos - 081220012</p>
-        <p>Maycon Silva Cardoso - 081220012</p>
+
+    <div class="hero-text">
+        <h1 class="text-white mb-4">
+            SOBRE A EMPRESA
+        </h1>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="owl-features owl-carousel" style="position: relative; z-index: 5;">
+                    <div class="item">
+                        <div class="thumb box-icon">
+                            <i class='bx bx-bot'></i>
+                            <div class="hover-effect">
+                                <div class="content">
+                                    <h4>Tempo Real</h4>
+                                    <ul>
+                                        <li>Através da integração de sistemas IoT, os dados são mandados em tempo real diretamente das suas estufas.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="thumb box-icon">
+                            <i class='bx bx-line-chart'></i>
+                            <div class="hover-effect">
+                                <div class="content">
+                                    <h4>Dashboard</h4>
+                                    <ul>
+                                        <li>Oferecemos dashboards personalizados, permitindo que você monitore e controle a temperatura de suas estufas com facilidade.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="thumb box-icon">
+                            <i class='bx bx-support'></i>
+                            <div class="hover-effect">
+                                <div class="content">
+                                    <h4>Suporte</h4>
+                                    <ul>
+                                        <li>Estamos aqui para ajudá-lo a alcançar os melhores resultados possíveis e garantir a excelência operacional do seu negócio.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <br />
+    <div class="container">
+        <div class="row border-top">
+            <div class="col-lg-10 col-12">
+                <h1 class="mb-4">SOBRE NÓS</h1>
+            </div>
+
+            <div class="col-lg-6 col-12 border-right" style="border-right-color: #ffeba7;">
+                <p>Nós somos o LEMA, e nossa missão é oferecer soluções inovadoras para garantir a eficiência e qualidade do seu processo de secagem.</p>
+                <p>Estamos aqui para ajudá-lo a alcançar os melhores resultados possíveis e garantir a excelência operacional do seu negócio.</p>
+            </div>
+
+            <div class="col-lg-6 col-12 mt-5 mt-lg-0">
+                <br />
+                <h4>Eleve o controle de temperatura em suas estufas para um novo nível de eficiência e qualidade.</h4>
+            </div>
+        </div>
+    </div>
+
+    <br />
+    <br />
+    <div class="speakers section-padding container">
+        <div class="row border-top">
+            <h1 class="mb-4">INTEGRANTES</h1>
+            <div class="col-lg-12 col-12">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <div class="box">
+                            <h5 class="speakers-title mb-0">Arthur Farias</h5>
+                            <p class="speakers-id mb-0">081220006</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <div class="box">
+                            <h5 class="speakers-title mb-0">Levi Matheus</h5>
+                            <p class="speakers-id mb-0">081220011</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <div class="box">
+                            <h5 class="speakers-title mb-0">Maycon Silva</h5>
+                            <p class="speakers-id mb-0">081220012</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <div class="box">
+                            <h5 class="speakers-title mb-0">Eloá Torres</h5>
+                            <p class="speakers-id mb-0">082210021</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
 </section>
-
