--- a/LEMA/Views/Empresa/Form.cshtml
+++ b/LEMA/Views/Empresa/Form.cshtml
@@ -16,7 +16,7 @@
         <h1 class="text">Editar Empresa</h1>
     }
 
-    <form action="Save" method="post" enctype="multipart/form-data" class="col-md-6">
+    <form action="Save" method="post" enctype="multipart/form-data" class="form-container">
         <input type="hidden" value="@ViewBag.Operacao" name="operacao" />
         <br />
         <br />
@@ -45,13 +45,13 @@
                         <input type="hidden" name="Id" value="@Model.Id" />
                     }
                     <div class="form-group">
-                        <label for="Empresa" class="control-label">Empresa</label>
+                        <label for="Empresa" class="control-label">Empresa<span class="mandatory"> *</span></label>
                         <input type="text" Name="Nome" value="@Model.Nome" class="form-control" autocomplete="off" />
                         <span asp-validation-for="Nome" class="text-danger"></span>
                         <br />
                     </div>
                     <div class="form-group">
-                        <label for="Telefone" class="control-label">Telefone</label>
+                        <label for="Telefone" class="control-label">Telefone <span class="mandatory"> *</span></label>
                         <input type="text" id="Telefone" name="Telefone" value="@Model.Telefone" class="form-control" autocomplete="off" />
                         <span asp-validation-for="Telefone" class="text-danger"></span>
                         <br />
@@ -59,7 +59,7 @@
                     <div class="form-group">
                         <br />
                         <input type="submit" class="btn" value="Salvar dados" />
-                        <a href="#" onclick="history.back()" class="btn" style="color: darkred;">Cancelar</a>
+                        <a href="#" onclick="history.back()" class="btn btn-cancel" style="color: darkred;">Cancelar</a>
 
                     </div>
                 </div>
