--- a/LEMA/wwwroot/css/usuario.css
+++ b/LEMA/wwwroot/css/usuario.css
@@ -69,8 +69,12 @@ card {
 }
 
 label {
+    display: flex;
     color: #ffeba7;
     margin: 0;
+}
+.mandatory {
+    color: red;
 }
 
 .row {
@@ -79,13 +83,7 @@ label {
     border: 2px solid #ffeba7;
     padding: 20px;
     border-radius: 10px;
-    margin-left: 20%;
-    transition: all 0.5s ease;
-}
-
-.menu-aberto .row {
-    margin-left: 0;
-    transition: all 0.5s ease;
+    margin: 0 auto;
 }
 
 
@@ -124,4 +122,9 @@ label {
 .btn-danger {
     margin-top: 10px;
     text-align: center;
+}
+
+.center-form {
+    display: flex;
+    justify-content: center;
 }
