Tela de histórico e ajuste dashboards

--- a/LEMA/Views/Home/Index.cshtml
+++ b/LEMA/Views/Home/Index.cshtml
@@ -17,25 +17,24 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="owl-features owl-carousel" style="position: relative; z-index: 5;">
-                    <a href="/Home/Index">
+                    <a href="/Dashboard/Index">
                         <div class="item">
                             <div class="thumb box-icon">
-                                <i class='bx bxs-home'></i>
+                                <i class='bx bx-station'></i>
                                 <div class="hover-effect">
                                     <div class="content">
-                                        <h4>Home</h4>
+                                        <h4>Real-Time</h4>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </a>
-                    <a href="/Dashboard/Index">
+                    </a><a href="/Dashboard/Historico">
                         <div class="item">
                             <div class="thumb box-icon">
-                                <i class='bx bx-pie-chart-alt-2'></i>
+                                <i class='bx bx-history'></i>
                                 <div class="hover-effect">
                                     <div class="content">
-                                        <h4>Dashboard</h4>
+                                        <h4>Histórico</h4>
                                     </div>
                                 </div>
                             </div>
