--- a/LEMA/Views/Shared/_Layout.cshtml
+++ b/LEMA/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/menu.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
@@ -39,10 +40,17 @@
                 </li>
                 <li>
                     <a href="/Dashboard/Index">
-                        <i class='bx bx-pie-chart-alt-2'></i>
-                        <span class="links_name">Dashboard</span>
+                        <i class='bx bx-station'></i>
+                        <span class="links_name">Real-Time</span>
                     </a>
-                    <span class="tooltip">Dashboard</span>
+                    <span class="tooltip">Real-Time</span>
+                </li>
+                <li>
+                    <a href="/Dashboard/Historico">
+                        <i class='bx bx-history'></i>
+                        <span class="links_name">Histórico</span>
+                    </a>
+                    <span class="tooltip">Histórico</span>
                 </li>
                 <li>
                     <a href="~/Dispositivo/Index">
