--- a/LEMA/Views/Dispositivo/Form.cshtml
+++ b/LEMA/Views/Dispositivo/Form.cshtml
@@ -38,7 +38,7 @@
                         <br />
                     </div>
                     <div class="form-group">
-                        <label for="Descricao" class="control-label">Descrição <span class="mandatory"> *</span></label>
+                        <label for="Descricao" class="control-label">Descrição</label>
                         <input type="text" Name="Descricao" value="@Model.Descricao" class="form-control" style="width: 130%;" autocomplete="off" />
                         <span asp-validation-for="Descricao" class="text-danger"></span>
                         <br />
