Form usuario-dispositivo e nova sp para combo dispositivo

--- a/LEMA/Views/Usuario/Index.cshtml
+++ b/LEMA/Views/Usuario/Index.cshtml
@@ -48,6 +48,7 @@
                 {
                     <td style="text-align:center">
                         <a href="/usuario/edit?id=@usuario.Id"> <span class="bx bxs-pencil icon-action"></span></a>
+                        <a href="/usuario/edit?id=@usuario.Id&formType=form2"> <span class="bx bx-link icon-action"></span></a>
                         <a onclick="usuario.confirma(@usuario.Id)"> <span class="bx bxs-trash-alt icon-action"></span></a>
                     </td>
                 }
