Ajuste encerramento de session e editar usuario

--- a/LEMA/Views/Dispositivo/Index.cshtml
+++ b/LEMA/Views/Dispositivo/Index.cshtml
@@ -31,7 +31,7 @@
                 @* A SP TERA QUE TRAZER SOMENTE OS DISPOSITIVOS DO USUARIO ATUAL, ADMINISTRADOR PODERÁ VER TODAS - não foi feito *@
                 <td style="text-align:center">
                     <a href="/dispositivo/edit?id=@dispositivo.Id"> <span class="bx bxs-pencil icon-action"></span></a>
-                    <a onclick="dispositivo.confirma(@dispositivo.Id)"> <span class="bx bxs-trash-alt icon-action"></span></a>
+                    <a href="#" onclick="dispositivo.confirma(@dispositivo.Id)"> <span class="bx bxs-trash-alt icon-action"></span></a>
                 </td>
             </tr>
         }
