--- a/LEMA/Views/Empresa/Index.cshtml
+++ b/LEMA/Views/Empresa/Index.cshtml
@@ -37,7 +37,7 @@
                 <td style="text-align:center">@empresa.Telefone</td>
                 <td style="text-align:center">
                     <a href="/empresa/edit?id=@empresa.Id"> <span class="bx bxs-pencil icon-action"></span></a>
-                    <a onclick="empresa.confirma(@empresa.Id)"> <span class="bx bxs-trash-alt icon-action"></span></a>
+                    <a href="#" onclick="empresa.confirma(@empresa.Id)"> <span class="bx bxs-trash-alt icon-action"></span></a>
                 </td>
 
             </tr>
