--- a/LEMA/Views/Usuario/Form.cshtml
+++ b/LEMA/Views/Usuario/Form.cshtml
@@ -43,6 +43,7 @@
                         @if (ViewBag.Operacao != "I")
                         {
                             <input type="hidden" name="Id" value="@Model.Id" />
+                            <input type="hidden" name="IdDispositivo" value="@Model.IdDispositivo" />
                         }
                         <div class="form-group">
                             <label for="Usuario" class="control-label">Usuário <span class="mandatory"> *</span></label>
