--- a/LEMA/Views/Usuario/Form2.cshtml
+++ b/LEMA/Views/Usuario/Form2.cshtml
@@ -33,7 +33,7 @@
                         {
                             <input type="hidden" name="Id" value="@Model.Id" />
                             <input type="hidden" name="Senha" value="@Model.Senha" />
-                            <input type="hidden" name="Empresa" value="@Model.NomeEmpresa" />
+                            <input type="hidden" name="IdEmpresa" value="@Model.IdEmpresa" />
                             <input type="hidden" asp-for="Perfil" value="@Model.Perfil" />
 
                         }
