Ajuste histórico por id dispositivo do usuário

--- a/LEMA/Views/Usuario/Index.cshtml
+++ b/LEMA/Views/Usuario/Index.cshtml
@@ -54,7 +54,9 @@
                 }
                 else
                 {
-                    <td></td>
+                    <td style="text-align:center">
+                        <a href="/usuario/edit?id=@usuario.Id&formType=form2"> <span class="bx bx-link icon-action"></span></a>
+                    </td>
                 }
             </tr>
         }
