Correções de bugs e lógica

--- a/LEMA/Views/Dashboard/Historico.cshtml
+++ b/LEMA/Views/Dashboard/Historico.cshtml
@@ -10,7 +10,7 @@
     var $historicoViewModel = @Html.Raw(Json.Serialize(ViewBag.HistoricoViewModel));
 </script>
 
-<section class="home-section">
+<section class="home-section" style="overflow:hidden">
     <h1 class="text">Histórico</h1>
     <br />
     <form action="DadosHistorico" method="post" enctype="multipart/form-data" class="row d-flex justify-content-center align-items-center" style="gap:50px">
