--- a/LEMA/Views/Usuario/Form.cshtml
+++ b/LEMA/Views/Usuario/Form.cshtml
@@ -13,7 +13,7 @@
     }
     else
     {
-        <h1>Editar Usuário</h1>
+        <h1 class="text">Editar Usuário</h1>
     }
 
     <div class="center-form">
