--- a/LEMA/wwwroot/css/sobre.css
+++ b/LEMA/wwwroot/css/sobre.css
@@ -26,7 +26,7 @@
         left: 0;
         width: 100%;
         height: 300px;
-        background: rgba(0, 0, 0, 0) linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgb(0, 0, 0) 100%) repeat scroll 0% 0%;
+        background: rgb(17 16 29 / 65%) linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgb(17 16 29) 100%) repeat scroll 0% 0%;
         z-index: -1;
     }
 
